Bug #19145707 - EDIT AND IMPORT SESSIONS ARE NOT SAVED IN OFFICE 2007 WIN7X64
- Added code to trigger WokbookAfterSave event handler on Excel 2007 since this version of Excel lacks the ability to trigger this event compared to later versions.

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1013,4 +1013,7 @@ What do you want to do with them?</value>
   <data name="WorkOfflineButtonText" xml:space="preserve">
     <value>Work Offline</value>
   </data>
+  <data name="ExcelDefaultFileExtensionText" xml:space="preserve">
+    <value>Excel 97-2003 Workbook (*.xls),*.xls</value>
+  </data>
 </root>
