MYSQLEXCEL-28 - Attempt to create one single connection instead of two for imported Excel tables
- Split the code that creates an Excel table so code is more modular and in order to move the code, that creates a Workbook connection needed for Model Tables to be created by Excel, to the MySqlDataRelationship class since those connections are only needed when creating new relationships and not to refresh imported data. Deleted the RemoveWorkbookConnection method since connections would be wrongly deleted when closing MySQL for Excel although they may be still needed by Excel tables. (source\Classes\ImportSessionInfo.cs, source\Classes\MySqlDataRelationship.cs)
- Modified the GetConnectionStringForCmdDefault method to add a Port to the connection string. (source\Classes\MySqlDataUtilities.cs, source\MySQL.ForExcel.csproj)
- Added the ParentWorkbookNullException class. (source\Classes\Exceptions\ParentWorkbookNullException.cs)
- Removed some methods that are only used in one single method of the MySqlDataRelationship class. Moved some code from the ImportSessionInfo class to the GetExcelTableNameAvoidingDuplicates since the code is always needed when getting a non-duplicate Excel table name. Added the GetWorkbookConnectionNameAvoidingDuplicates methods to avoid duplicate names on created Workbook connections. (source\Classes\ExcelUtilities.cs)
- Removed deprecated and non-used methods to avoid further confusion on which methods need to be modified in case of bugs. (source\Classes\MySQLDataTable.cs, source\Classes\ExcelUtilities.cs)
- Renamed the AddSummaryFields properties to AddSummaryRow to be more consistent with the action. (source\Classes\DbProcedure.cs, source\Classes\DbView.cs, source\Classes\ImportDataParams.cs, source\Classes\ImportSessionInfo.cs, source\Classes\MySQLDataTable.cs, source\Forms\ImportMultipleDialog.cs, source\Forms\ImportProcedureForm.cs, source\Forms\ImportTableViewForm.cs)
- Added resource strings for the workbook connection descriptions. (sou

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.2
+- Optimized code that creates Workbook connections so instead of always creating 2 connections for each created Excel table now 1 is created. A second Workbook connection
+  is only created when creating Excel relationships for imported tables, that second connection is needed for Excel to create their corresponding Model Tables which are
+  used to create each Excel relationship.
 - Rewording of Restore Saved Edit Sessions and Import Sessions Missing Connections dialogs to make them more understandable.
 - Added token validation at AfterSave event to ensure no reconnection information is saved when the workbook saving process is cancelled.
   (MySQL Bug #73192, Bug #19153978 - RECONNECTION INFO FOR EXCEL TABLES IS SAVED ALTHOUGH WORKBOOK SAVE IS CANCELLED)
