MYSQLEXCEL-27 - Add ability to create a single PivotTable from multiple imported MySQL tables
- Added a new combo box to the Import Multiple dialog to let users create one single PivotTable for all Excel tables in the active Workbook's data model, or to create a PivotTable for each of the imported tables or views, when importing multiple database objects. Broke down methods in the ImportMultipleDialog class to first import database objects, then create Excel relationships and last create a PivotTable for the whole data model. (source/Forms/ImportMultipleDialog.cs, source/Forms/ImportMultipleDialog.Designer.cs, source/Forms/ImportMultipleDialog.resx)
- Created different overloads of the CreatePivotTable to make them more maintainable and better understandable. Created the GetPivotTableTopLeftCell method to extract that piece of logic from the callers of the CreatePivotTable methods and encapsulate it in the ExcelUtilities class. (source/Classes/ExcelUtilities.cs)
- Moved the PivotTablePosition enumeration from the MySqlDataTable to the ExcelUtilities class since PivotTables are created in the latter class. (source/Classes/ExcelUtilities.cs, source/Classes/MySQLDataTable.cs, source/Classes/ImportDataParams.cs, source/Classes/DbProcedure.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.2
+- Added a new combo box to the Import Multiple dialog to let users create one single PivotTable for all Excel tables in the active Workbook's data model, or to create a
+  PivotTable for each of the imported tables or views, when importing multiple database objects. By default the option to create a single Pivot Table is selected when the
+  "Create a PivotTable" checkbox is checked.
 - Optimized code that creates Workbook connections so instead of always creating 2 connections for each created Excel table now 1 is created. A second Workbook connection
   is only created when creating Excel relationships for imported tables, that second connection is needed for Excel to create their corresponding Model Tables which are
   used to create each Excel relationship.
