MySQL Bug# 73151, Bug #19129583 - IMPORT PROCEDURE IS NOT WORKING
- Modified the DataOperationType enumeration to split the "Import" value into "ImportProcedure" and "ImportTableOrView" so MySqlDataTable instances know exactly what kind of import was done and to behave differently at the moment of refreshing the data. Modified some MySqlDataTable constructors to receive a DataOperationType and also a SQL query for procedures and the result set index the table is storing.  Modified the RefreshData method to handle the scenario of refreshing a stored procedure's data. (source/Classes/MySqlDataTable.cs, source/Classes/DbView.cs)
- Added the GetSql method that assembles a SQL query needed to execute the stored procedure initializing variables for its parameters and returning a result set with output and return values. Modified the Execute method to send the procedure's SQL query to the MySqlDataTable created for each result set. (source/Classes/DbProcedure.cs)
- Added 2 new properties to the ImportSessionInfo class needed to persist information needed when recreating the MySqlDataTable tied to the session in the Restore method: OperationType and ProcedureResultSetIndex. Modified the Refresh method so only the binding is done when working with stored procedures (since at the moment the ImportSessionInfo is created the MySqlDataTable tied to each result set contains all of the information needed, refreshing it would be an unneeded operation). (source/Classes/ImportSessionInfo.cs)
- Added the GetSetStatement method needed to build the SQL query part containing SET statements for each MySqlParameter used with stored procedures. Modified the GetDataFromSelectQuery method to receive an index of the table within the DataSet obtained by running the given SQL query to be returned by the method. Modified the CreateImportMySqlTable to work with the other described changes. (source/Classes/MySQLDataUtilities.cs)
- Added the RequiresQuotesForValue method to analyze a DbType or a MyS

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.2
+- Fixed the import of stored procedure result sets into Excel tables (the import to Excel ranges was working), and more importantly implemented code that lets the Excel
+  tables created from stored procedures to be refreshed by the user. (MySQL Bug# 73151, Bug #19129583 - IMPORT PROCEDURE IS NOT WORKING)
 - Fixed a problem that arise when creating a new workbook without closing the Excel Addin Pane, making it impossible to import tables after that.
   (MySQL Bug #73263, Bug #19189185 - UNABLE TO IMPORT TABLES IN MYSQL FOR EXCEL UNDER WEIRD SCENARIO)
 - Added a new combo box to the Import Multiple dialog to let users create one single PivotTable for all Excel tables in the active Workbook's data model, or to create a
