--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.2
+- Removed saving step that created invalid connection information entries in the settings.config file even when the user chose not to save the workbook.
+  (MySQL Bug #73319, Bug #19242130 - INVALID CONNECTION INFORMATION IS SAVED WITHOUT THE USER SAVING THE WORKBOOK)
 - Fixed the import of stored procedure result sets into Excel tables (the import to Excel ranges was working), and more importantly implemented code that lets the Excel
   tables created from stored procedures to be refreshed by the user. (MySQL Bug# 73151, Bug #19129583 - IMPORT PROCEDURE IS NOT WORKING)
 - Fixed a problem that arise when creating a new workbook without closing the Excel Addin Pane, making it impossible to import tables after that.
